--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,5 @@
 php_value opcache.enable 0
+php_value memory_limit 64M
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews
